--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,9 +14,12 @@
   <h1 style="padding: 1.5rem">DockMaster Alpha</h1>
 
   <div class="container">
-    <input type=" text" class="form-control" id="nameBox" placeholder="Name on rental contract" style="width: 50%; display: inline-block">
-    <button name="addName" class="btn btn-light" id="addName" onclick="addName()" style="width: 20%; margin: auto; display: inline-block">Add Group</button>
-    <button name="testAdd" class="btn btn-light" id="testAdd" onclick="testAdd()" style="width: 10%; margin: auto; display: inline-block">Test</button>
+
+    <form id = "addNameForm", action="/" method="POST" id="chatForm">
+    <input id="nameBox" placeholder="Name on rental contract" style="width: 50%; display: inline-block">
+    <button name="addName" class="btn btn-light" style="width: 20%; margin: auto; display: inline-block">Add Group</button>
+    </form>
+
     <br><br>
     <table id="table" class="table table-hover" style="width: 650px; margin: auto">
       <thead>
@@ -31,11 +34,18 @@
       </tbody>
     </table>
   </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/bootstrap-table@1.18.0/dist/bootstrap-table.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js"></script>
   <script src="/index.js"></script>
+
+  <script>
+
+  </script>
+
 </body>
 
 </html>
