--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.18.0/dist/bootstrap-table.min.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body style="text-align: center">
@@ -16,7 +17,7 @@
   <div class="container">
 
     <form id = "addNameForm", action="/" method="POST" id="chatForm">
-    <input id="nameBox" placeholder="Name on rental contract" style="width: 50%; display: inline-block">
+    <input id="nameBox" placeholder="Name on rental contract" autocomplete="on" style="width: 50%; display: inline-block">
     <button name="addName" class="btn btn-light" style="width: 20%; margin: auto; display: inline-block">Add Group</button>
     </form>
 
