--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,12 +34,12 @@
       <tbody id="tableBody">
       <% for (let i = 0; i < newListItems.length; i++) { %>
         <tr id='row<%= newListItems[i].id %>'>
-          <td>
+          <td contenteditable="true">
             <%= newListItems[i].name %>
-          <td>
+          <td id='checkOutCell<%= newListItems[i].id %>'>
             <button id='checkOutBtn<%= newListItems[i].id %>' class='btn btn-light'>Check Out</button>
           </td>
-          <td>
+          <td id='checkInCell<%= newListItems[i].id %>'>
             <button id='checkInBtn<%= newListItems[i].id %>' class='btn btn-light'>Check In</button>
           </td>
           <td>
