Add city of a2 logo.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,9 @@
         </tr>
         <% } %>
       </tbody>
-    </table>
+    </table><br><br><br><br>
+    <img src="images/logo.jpg" style="max-width: 10%"/><br><br>
+    <small class="footer">2021 Andrew Gasparovich</small>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
